# EECS405Project

./: README.md
dataset/: actor.txt  gene.txt  movie20000.txt  movie500.txt
flamingo-4.1/src/common/: Makefile
flamingo-4.1/src/filtertree/: CMakeCache.txt  Makefile  cmake_install.cmake
flamingo-4.1/src/listmerger/: Makefile  cmake_install.cmake
flamingo-4.1/src/mattree/: NFAMatch.h  NFATransition.cpp  Rect.cpp  Trie.cpp  parameters.h
flamingo-4.1/src/mattree/.svn/text-base/: NFA.cpp.svn-base  NFAMatch.cpp.svn-base  NFANode.cpp.svn-base  NFANode.h.svn-base  RETree.cpp.svn-base  StdAfx.cpp.svn-base  index.cpp.svn-base  node.cpp.svn-base
flamingo-4.1/src/partenum/: CMakeCache.txt  CMakeLists.txt  CMakeLists4.txt  Makefile  cmake_install.cmake
flamingo-4.1/src/partenum/src/: example.cc  partenum.cc  partenum.h  test.cc  vpartenum.cc  vpartenum.h
flamingo-4.1/src/stringmap/src/: split_l.cpp  split_l.h
flamingo-4.1/src/util/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
flamingo-4.1/src/util/src/: vgram.cc  vgram.h
submission/partenum-vgram/: README.txt
submission/partenum-vgram/common/: cmake_install.cmake
submission/partenum-vgram/common/src/: compressionargs.h
submission/partenum-vgram/partenum/: Makefile  cmake_install.cmake
submission/partenum-vgram/partenum/src/: example.cc  partenum.cc  partenum.h  unittest.cc  vpartenum.cc  vpartenum.h
submission/partenum-vgram/util/: CMakeLists.txt  Makefile  cmake_install.cmake
